// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form/Label Default smoke-test 1`] = `
<label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70">
  Accept terms and conditions
</label>
`;

exports[`Form/Label Required smoke-test 1`] = `
<div class="grid w-full max-w-sm items-center gap-1.5">
  <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
         for="required-email"
  >
    Email
    <span class="text-red-500">
      *
    </span>
  </label>
  <input class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
         id="required-email"
         placeholder="Email"
         required
         type="email"
  >
</div>
`;

exports[`Form/Label WithCheckbox smoke-test 1`] = `
<div class="flex items-center space-x-2">
  <button type="button"
          role="checkbox"
          aria-checked="false"
          data-state="unchecked"
          value="on"
          class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
          id="terms"
  >
  </button>
  <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
         for="terms"
  >
    Accept terms and conditions
  </label>
</div>
`;

exports[`Form/Label WithDescription smoke-test 1`] = `
<div class="grid w-full max-w-sm gap-1.5">
  <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
         for="picture"
  >
    Picture
  </label>
  <input class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
         id="picture"
         type="file"
  >
  <p class="text-muted-foreground text-sm">
    Upload a picture to your profile.
  </p>
</div>
`;

exports[`Form/Label WithInput smoke-test 1`] = `
<div class="grid w-full max-w-sm items-center gap-1.5">
  <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
         for="email"
  >
    Your email address
  </label>
  <input class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
         id="email"
         placeholder="Email"
         type="email"
  >
</div>
`;
